@@ -110,9 +110,9 @@ ploMapStat <- function(mat, sampleName="", tag="", legend=TRUE){
                 ggtitle(tit) + theme(plot.title = element_text(lineheight=.8, face="bold", size=6))
 
   if (legend){
-    gp = gp + scale_fill_manual(values=sel.colours[2:6], labels = c("Global mapping (%)",  "Local Mapping (%)", "Aligned reads (%)", "Not aligned (%)")) + guides(fill=guide_legend(title="")) + theme(plot.margin=unit(x=c(1,0,0,0), units="cm"), legend.position="bottom", legend.margin=unit(.5,"cm"), legend.text=element_text(size=4))
+    gp = gp + scale_fill_manual(values=c(sel.colours[2:4], "darkgray"), labels = c("Global mapping (%)",  "Local Mapping (%)", "Aligned reads (%)", "Not aligned (%)")) + guides(fill=guide_legend(title="")) + theme(plot.margin=unit(x=c(1,0,0,0), units="cm"), legend.position="bottom", legend.margin=unit(.5,"cm"), legend.text=element_text(size=4))
   }else{
-    gp = gp + scale_fill_manual(values=sel.colours[2:6]) + theme(plot.margin=unit(c(1,0,1.9,0),"cm"))+ guides(fill=FALSE)
+    gp = gp + scale_fill_manual(values=c(sel.colours[2:4], "darkgray")) + theme(plot.margin=unit(c(1,0,1.9,0),"cm"))+ guides(fill=FALSE)
   }
   gp
 }
@@ -130,9 +130,9 @@ allmapstat_r2 <- list.files(path=bwtDir, pattern=paste0("^[[:print:]]*",r2tag,"[
 stopifnot(length(allmapstat_r1)>0 && length(allmapstat_r2)>0)
 
 ## Get statistics summary
-stats_per_fastq_r1<- sapply(allmapstat_r1, read.csv, sep=" ", row.names=2, as.is=TRUE)
+stats_per_fastq_r1<- sapply(allmapstat_r1, read.csv, sep=" ", row.names=2, as.is=TRUE, comment.char="#", header=FALSE)
 stats_per_sample_r1<- colSums(do.call(rbind, stats_per_fastq_r1))
-stats_per_fastq_r2<- sapply(allmapstat_r2, read.csv, sep=" ", row.names=2, as.is=TRUE)
+stats_per_fastq_r2<- sapply(allmapstat_r2, read.csv, sep=" ", row.names=2, as.is=TRUE, comment.char="#", header=FALSE)
 stats_per_sample_r2<- colSums(do.call(rbind, stats_per_fastq_r2))
 
 ## Make plots
