@@ -1,0 +1,120 @@
+## Nicolas Servant
+## Plot mapping proportion
+rm(list=ls())
+
+args <- commandArgs(TRUE)
+la <- length(args)
+if (la > 0){
+  for (i in 1:la)
+    eval(parse(text=args[[i]]))
+}
+
+## getPairMat
+## Generate data.frame for ggplot2 graphical output
+## x = vector with all expected Hi-C results
+##
+getPairMat <- function(x, x.perc){
+  require(RColorBrewer)
+  
+  notreported.lab <- c("Low_qual_pairs", "Multiple_pairs_alignments", "Local_align_nocutSite")
+  reported.lab <- "Reported_pairs"
+  allnotreported.lab <- "Not_Reported_pairs"
+  un.lab <- "Unmapped_pairs"
+  
+  n.reported_pairs <- x[reported.lab]
+  n.notreported_pairs <-sum(x[notreported.lab])
+
+  ## Add total number of not reported pairs
+  x[allnotreported.lab]<-n.notreported_pairs
+  x.perc[allnotreported.lab] <- round(n.notreported_pairs/x["Total_pairs_processed"]*100,1)
+
+  ## Check
+  stopifnot(x[un.lab]+x[reported.lab]+x[allnotreported.lab]==x["Total_pairs_processed"])
+    
+  ## Get percentage
+  x.perc <- round(x.perc, 1)
+  
+  ## multiple plots
+  p <- rep(1, 6)
+  names(p) <- c(reported.lab, allnotreported.lab, un.lab, notreported.lab)
+  p[notreported.lab] <- 2
+
+  mmat <- data.frame(cbind(lab=names(p), p, count=x[names(p)], perc=x.perc[names(p)]), stringsAsFactors=FALSE)
+
+  ## pos for label
+  mmat$pos <- rep(0, length(p))
+  for (i in unique(mmat$p)){
+    idx <-  which(mmat$p==i)
+    mmat$pos[idx] <- cumsum(as.numeric(as.character(mmat$count[idx])))-as.numeric(as.character(mmat$count[idx]))/2
+  }  
+  mmat$pos[which(mmat$count==0)] <- NA
+
+  ## Colours
+  sel.reported <- brewer.pal(6,"Blues")
+  sel.notreported <- brewer.pal(6,"Reds")
+
+  col <- rep(NA, dim(mmat)[1])
+  names(col) <- names(p)
+  col[notreported.lab] <- sel.notreported[1:length(notreported.lab)]
+  col[c(reported.lab, allnotreported.lab)] <- sel.reported[1:2]
+  col[un.lab] <- "darkgray"
+  mmat$selcol <- col
+  
+  mmat[order(mmat$p), ]
+}
+
+## plotPairStat
+## Generate ggplot2 plot
+## mat = data.frame with all values to plot. see getHiCMat()
+## xlab = character for xlabel
+## legend = logical. If true, the legend is plotted
+##
+plotPairStat <- function(mat, xlab="", legend=TRUE){
+  require(RColorBrewer)
+  require(ggplot2)
+  require(grid)
+
+  ## update labels for plot
+  mat$lab <- paste0(gsub("_", " ", mat$lab)," (%)")
+
+  gp <-ggplot(mat, aes(x=p, as.numeric(count), fill=as.character(lab))) +
+    geom_bar(width=.7,stat="identity", colour="gray") + 
+      theme(axis.title=element_text(face="bold", size=6), axis.ticks = element_blank(),  axis.text.y = element_text(size=5), axis.text.x = element_text(size=6))+
+        xlab(xlab) + ylab("Reads Count") +
+            scale_x_discrete(breaks=c("1", "2"), labels=c("All Pairs","Filtered Pairs"))+
+              geom_text(aes(x=p, y=as.numeric(pos), label=paste(perc,"%")),fontface="bold", size=2) +
+                ggtitle("Statistics after Filtering on Reads Pairing") + theme(plot.title = element_text(lineheight=.8, face="bold", size=6))
+
+  if (legend){
+    scol <- mat$selcol
+    names(scol) <- mat$lab
+    gp = gp + scale_fill_manual(values=scol) + guides(fill=guide_legend(title="")) + theme(plot.margin=unit(x=c(1,0,0,0), units="cm"), legend.position="right", legend.margin=unit(.5,"cm"), legend.text=element_text(size=4))
+  }else{
+    gp = gp + scale_fill_manual(values=as.character(col)) + theme(plot.margin=unit(c(1,0,1.9,0),"cm"))+ guides(fill=FALSE)
+  }
+  gp
+}
+
+####################################
+##
+## plotPairingPortion.R
+##
+####################################
+
+## Get HiC stat files for all fastq files of a given sample
+allpairstat <- list.files(path=bwtDir, pattern=paste0("^[[:print:]]*pairstat$"), full.names=TRUE)
+stopifnot(length(allpairstat)>0)
+
+## Get statistics summary
+stats_per_fastq<- lapply(allpairstat, read.csv, sep="\t", as.is=TRUE, header=FALSE, comment.char="#", row.names=1)
+stats_per_sample<- rowSums(do.call(cbind,lapply(stats_per_fastq, "[", 1)))
+perc_per_sample<- rowSums(do.call(cbind,lapply(stats_per_fastq, "[", 2)))
+
+
+## Make plots
+mat <- getPairMat(stats_per_sample, perc_per_sample)
+p1 <- plotPairStat(mat, xlab=sampleName)
+
+pdf(file.path(picDir, paste0("plotMappingFiltering_",sampleName,".pdf")), width=5, height=5)
+p1
+dev.off()
